# cpp_confparser

./: .gitignore  CMakeLists.txt  makefile
example/: config.ini  main.cpp  makefile
include/: any_wrapper.hpp  confparser.hpp  ptr_wrapper.hpp
src/: confparser.cpp
